// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`build: origin and unitBox > origin graph shape 1`] = `
{
  "effect": "pure",
  "inPort": {
    "label": "in",
    "ty": "Unit",
  },
  "nodes": [
    {
      "effect": "pure",
      "kind": "const",
      "label": "node[0]",
      "output": {
        "label": "port[0]",
        "ty": "Unit",
      },
      "provenance": true,
      "value": {
        "tag": "unit",
      },
    },
    {
      "effect": "pure",
      "input": {
        "label": "port[1]",
        "ty": "Unit",
      },
      "kind": "drop",
      "label": "node[1]",
      "output": {
        "label": "port[2]",
        "ty": "Unit",
      },
      "provenance": true,
    },
    {
      "effect": "pure",
      "kind": "const",
      "label": "node[2]",
      "output": {
        "label": "port[3]",
        "ty": "Int",
      },
      "provenance": true,
      "value": {
        "tag": "int",
        "value": 0,
      },
    },
    {
      "effect": "pure",
      "kind": "const",
      "label": "node[3]",
      "output": {
        "label": "port[4]",
        "ty": "Unit",
      },
      "provenance": true,
      "value": {
        "tag": "unit",
      },
    },
    {
      "effect": "pure",
      "input": {
        "label": "port[5]",
        "ty": "Unit",
      },
      "kind": "drop",
      "label": "node[4]",
      "output": {
        "label": "port[6]",
        "ty": "Unit",
      },
      "provenance": true,
    },
    {
      "effect": "pure",
      "kind": "const",
      "label": "node[5]",
      "output": {
        "label": "port[7]",
        "ty": "Int",
      },
      "provenance": true,
      "value": {
        "tag": "int",
        "value": 0,
      },
    },
    {
      "effect": "pure",
      "input": {
        "label": "port[8]",
        "ty": "Unit",
      },
      "kind": "drop",
      "label": "node[6]",
      "output": {
        "label": "port[9]",
        "ty": "Unit",
      },
      "provenance": true,
    },
    {
      "effect": "pure",
      "inputs": [
        {
          "label": "x",
          "port": {
            "label": "port[3]",
            "ty": "Int",
          },
        },
        {
          "label": "y",
          "port": {
            "label": "port[7]",
            "ty": "Int",
          },
        },
      ],
      "kind": "tuple",
      "label": "node[7]",
      "output": {
        "label": "port[10]",
        "ty": "{ x: Int, y: Int }",
      },
      "provenance": true,
    },
    {
      "adtTy": "Point",
      "ctorName": "Point",
      "effect": "pure",
      "input": {
        "label": "port[11]",
        "ty": "{ x: Int, y: Int }",
      },
      "kind": "ctor",
      "label": "node[8]",
      "output": {
        "label": "port[12]",
        "ty": "Point",
      },
      "provenance": true,
    },
  ],
  "outPort": {
    "label": "out",
    "ty": "Point",
  },
  "provenance": true,
  "wires": [
    {
      "from": "port[0]",
      "to": "port[1]",
    },
    {
      "from": "port[4]",
      "to": "port[5]",
    },
    {
      "from": "in",
      "to": "port[8]",
    },
    {
      "from": "port[10]",
      "to": "port[11]",
    },
    {
      "from": "port[12]",
      "to": "out",
    },
  ],
}
`;

exports[`build: origin and unitBox > unitBox graph shape 1`] = `
{
  "effect": "pure",
  "inPort": {
    "label": "in",
    "ty": "Unit",
  },
  "nodes": [
    {
      "effect": "pure",
      "kind": "const",
      "label": "node[0]",
      "output": {
        "label": "port[0]",
        "ty": "Unit",
      },
      "provenance": true,
      "value": {
        "tag": "unit",
      },
    },
    {
      "defId": "Golden.Build.origin",
      "effect": "pure",
      "input": {
        "label": "port[1]",
        "ty": "Unit",
      },
      "kind": "ref",
      "label": "node[1]",
      "output": {
        "label": "port[2]",
        "ty": "Point",
      },
      "provenance": true,
    },
    {
      "effect": "pure",
      "kind": "const",
      "label": "node[2]",
      "output": {
        "label": "port[3]",
        "ty": "Unit",
      },
      "provenance": true,
      "value": {
        "tag": "unit",
      },
    },
    {
      "defId": "Golden.Build.origin",
      "effect": "pure",
      "input": {
        "label": "port[4]",
        "ty": "Unit",
      },
      "kind": "ref",
      "label": "node[3]",
      "output": {
        "label": "port[5]",
        "ty": "Point",
      },
      "provenance": true,
    },
    {
      "effect": "pure",
      "input": {
        "label": "port[6]",
        "ty": "Unit",
      },
      "kind": "drop",
      "label": "node[4]",
      "output": {
        "label": "port[7]",
        "ty": "Unit",
      },
      "provenance": true,
    },
    {
      "effect": "pure",
      "inputs": [
        {
          "label": "topLeft",
          "port": {
            "label": "port[2]",
            "ty": "Point",
          },
        },
        {
          "label": "bottomRight",
          "port": {
            "label": "port[5]",
            "ty": "Point",
          },
        },
      ],
      "kind": "tuple",
      "label": "node[5]",
      "output": {
        "label": "port[8]",
        "ty": "{ topLeft: Point, bottomRight: Point }",
      },
      "provenance": true,
    },
    {
      "adtTy": "BoundingBox",
      "ctorName": "BoundingBox",
      "effect": "pure",
      "input": {
        "label": "port[9]",
        "ty": "{ topLeft: Point, bottomRight: Point }",
      },
      "kind": "ctor",
      "label": "node[6]",
      "output": {
        "label": "port[10]",
        "ty": "BoundingBox",
      },
      "provenance": true,
    },
  ],
  "outPort": {
    "label": "out",
    "ty": "BoundingBox",
  },
  "provenance": true,
  "wires": [
    {
      "from": "port[0]",
      "to": "port[1]",
    },
    {
      "from": "port[3]",
      "to": "port[4]",
    },
    {
      "from": "in",
      "to": "port[6]",
    },
    {
      "from": "port[8]",
      "to": "port[9]",
    },
    {
      "from": "port[10]",
      "to": "out",
    },
  ],
}
`;

exports[`case .field: handleResult > handleResult graph shape 1`] = `
{
  "effect": "pure",
  "inPort": {
    "label": "in",
    "ty": "{ result: Result, label: Text }",
  },
  "nodes": [
    {
      "branches": [
        {
          "graph": {
            "effect": "pure",
            "inPort": {
              "label": "in",
              "ty": "{ value: Int, label: Text }",
            },
            "nodes": [
              {
                "effect": "pure",
                "input": {
                  "label": "in",
                  "ty": "{ value: Int, label: Text }",
                },
                "kind": "dup",
                "label": "node[0]",
                "outputs": [
                  {
                    "label": "port[0]",
                    "ty": "{ value: Int, label: Text }",
                  },
                  {
                    "label": "port[1]",
                    "ty": "{ value: Int, label: Text }",
                  },
                ],
                "provenance": true,
              },
              {
                "effect": "pure",
                "field": "value",
                "input": {
                  "label": "port[2]",
                  "ty": "{ value: Int, label: Text }",
                },
                "kind": "proj",
                "label": "node[1]",
                "output": {
                  "label": "port[3]",
                  "ty": "Int",
                },
                "provenance": true,
              },
              {
                "effect": "pure",
                "input": {
                  "label": "port[3]",
                  "ty": "Int",
                },
                "kind": "drop",
                "label": "node[2]",
                "output": {
                  "label": "port[4]",
                  "ty": "Unit",
                },
                "provenance": true,
              },
              {
                "effect": "pure",
                "field": "label",
                "input": {
                  "label": "port[5]",
                  "ty": "{ value: Int, label: Text }",
                },
                "kind": "proj",
                "label": "node[3]",
                "output": {
                  "label": "port[6]",
                  "ty": "Text",
                },
                "provenance": true,
              },
            ],
            "outPort": {
              "label": "out",
              "ty": "Text",
            },
            "provenance": true,
            "wires": [
              {
                "from": "port[0]",
                "to": "port[2]",
              },
              {
                "from": "port[1]",
                "to": "port[5]",
              },
              {
                "from": "port[6]",
                "to": "out",
              },
            ],
          },
          "rawPayloadTy": "{ value: Int }",
          "tag": "Ok",
        },
        {
          "graph": {
            "effect": "pure",
            "inPort": {
              "label": "in",
              "ty": "{ code: Int, label: Text }",
            },
            "nodes": [
              {
                "effect": "pure",
                "input": {
                  "label": "in",
                  "ty": "{ code: Int, label: Text }",
                },
                "kind": "dup",
                "label": "node[0]",
                "outputs": [
                  {
                    "label": "port[0]",
                    "ty": "{ code: Int, label: Text }",
                  },
                  {
                    "label": "port[1]",
                    "ty": "{ code: Int, label: Text }",
                  },
                ],
                "provenance": true,
              },
              {
                "effect": "pure",
                "field": "code",
                "input": {
                  "label": "port[2]",
                  "ty": "{ code: Int, label: Text }",
                },
                "kind": "proj",
                "label": "node[1]",
                "output": {
                  "label": "port[3]",
                  "ty": "Int",
                },
                "provenance": true,
              },
              {
                "effect": "pure",
                "input": {
                  "label": "port[3]",
                  "ty": "Int",
                },
                "kind": "drop",
                "label": "node[2]",
                "output": {
                  "label": "port[4]",
                  "ty": "Unit",
                },
                "provenance": true,
              },
              {
                "effect": "pure",
                "field": "label",
                "input": {
                  "label": "port[5]",
                  "ty": "{ code: Int, label: Text }",
                },
                "kind": "proj",
                "label": "node[3]",
                "output": {
                  "label": "port[6]",
                  "ty": "Text",
                },
                "provenance": true,
              },
            ],
            "outPort": {
              "label": "out",
              "ty": "Text",
            },
            "provenance": true,
            "wires": [
              {
                "from": "port[0]",
                "to": "port[2]",
              },
              {
                "from": "port[1]",
                "to": "port[5]",
              },
              {
                "from": "port[6]",
                "to": "out",
              },
            ],
          },
          "rawPayloadTy": "{ code: Int }",
          "tag": "Err",
        },
      ],
      "contextTy": "{ label: Text }",
      "effect": "pure",
      "field": "result",
      "input": {
        "label": "port[0]",
        "ty": "{ result: Result, label: Text }",
      },
      "kind": "case",
      "label": "node[0]",
      "outTy": "Text",
      "output": {
        "label": "port[1]",
        "ty": "Text",
      },
      "provenance": true,
      "variantTy": "Result",
    },
  ],
  "outPort": {
    "label": "out",
    "ty": "Text",
  },
  "provenance": true,
  "wires": [
    {
      "from": "in",
      "to": "port[0]",
    },
    {
      "from": "port[1]",
      "to": "out",
    },
  ],
}
`;

exports[`fanout: Point transformations > reflect graph shape 1`] = `
{
  "effect": "pure",
  "inPort": {
    "label": "in",
    "ty": "Point",
  },
  "nodes": [
    {
      "branches": [
        {
          "graph": {
            "effect": "pure",
            "inPort": {
              "label": "in",
              "ty": "{ x: Int, y: Int }",
            },
            "nodes": [
              {
                "effect": "pure",
                "input": {
                  "label": "in",
                  "ty": "{ x: Int, y: Int }",
                },
                "kind": "dup",
                "label": "node[0]",
                "outputs": [
                  {
                    "label": "port[0]",
                    "ty": "{ x: Int, y: Int }",
                  },
                  {
                    "label": "port[1]",
                    "ty": "{ x: Int, y: Int }",
                  },
                ],
                "provenance": true,
              },
              {
                "effect": "pure",
                "field": "x",
                "input": {
                  "label": "port[2]",
                  "ty": "{ x: Int, y: Int }",
                },
                "kind": "proj",
                "label": "node[1]",
                "output": {
                  "label": "port[3]",
                  "ty": "Int",
                },
                "provenance": true,
              },
              {
                "effect": "pure",
                "field": "y",
                "input": {
                  "label": "port[4]",
                  "ty": "{ x: Int, y: Int }",
                },
                "kind": "proj",
                "label": "node[2]",
                "output": {
                  "label": "port[5]",
                  "ty": "Int",
                },
                "provenance": true,
              },
              {
                "effect": "pure",
                "input": {
                  "label": "port[6]",
                  "ty": "{ x: Int, y: Int }",
                },
                "kind": "dup",
                "label": "node[3]",
                "outputs": [
                  {
                    "label": "port[7]",
                    "ty": "{ x: Int, y: Int }",
                  },
                  {
                    "label": "port[8]",
                    "ty": "{ x: Int, y: Int }",
                  },
                ],
                "provenance": true,
              },
              {
                "effect": "pure",
                "input": {
                  "label": "port[9]",
                  "ty": "{ x: Int, y: Int }",
                },
                "kind": "drop",
                "label": "node[4]",
                "output": {
                  "label": "port[10]",
                  "ty": "Unit",
                },
                "provenance": true,
              },
              {
                "effect": "pure",
                "input": {
                  "label": "port[11]",
                  "ty": "{ x: Int, y: Int }",
                },
                "kind": "drop",
                "label": "node[5]",
                "output": {
                  "label": "port[12]",
                  "ty": "Unit",
                },
                "provenance": true,
              },
              {
                "effect": "pure",
                "inputs": [
                  {
                    "label": "x",
                    "port": {
                      "label": "port[5]",
                      "ty": "Int",
                    },
                  },
                  {
                    "label": "y",
                    "port": {
                      "label": "port[3]",
                      "ty": "Int",
                    },
                  },
                ],
                "kind": "tuple",
                "label": "node[6]",
                "output": {
                  "label": "port[13]",
                  "ty": "{ x: Int, y: Int }",
                },
                "provenance": true,
              },
              {
                "adtTy": "Point",
                "ctorName": "Point",
                "effect": "pure",
                "input": {
                  "label": "port[14]",
                  "ty": "{ x: Int, y: Int }",
                },
                "kind": "ctor",
                "label": "node[7]",
                "output": {
                  "label": "port[15]",
                  "ty": "Point",
                },
                "provenance": true,
              },
            ],
            "outPort": {
              "label": "out",
              "ty": "Point",
            },
            "provenance": true,
            "wires": [
              {
                "from": "port[0]",
                "to": "port[2]",
              },
              {
                "from": "port[1]",
                "to": "port[4]",
              },
              {
                "from": "in",
                "to": "port[6]",
              },
              {
                "from": "port[7]",
                "to": "port[9]",
              },
              {
                "from": "port[8]",
                "to": "port[11]",
              },
              {
                "from": "port[13]",
                "to": "port[14]",
              },
              {
                "from": "port[15]",
                "to": "out",
              },
            ],
          },
          "rawPayloadTy": "{ x: Int, y: Int }",
          "tag": "Point",
        },
      ],
      "contextTy": undefined,
      "effect": "pure",
      "field": undefined,
      "input": {
        "label": "port[0]",
        "ty": "Point",
      },
      "kind": "case",
      "label": "node[0]",
      "outTy": "Point",
      "output": {
        "label": "port[1]",
        "ty": "Point",
      },
      "provenance": true,
      "variantTy": "Point",
    },
  ],
  "outPort": {
    "label": "out",
    "ty": "Point",
  },
  "provenance": true,
  "wires": [
    {
      "from": "in",
      "to": "port[0]",
    },
    {
      "from": "port[1]",
      "to": "out",
    },
  ],
}
`;

exports[`fanout: Point transformations > reflectThenTranslate graph shape 1`] = `
{
  "effect": "pure",
  "inPort": {
    "label": "in",
    "ty": "Point",
  },
  "nodes": [
    {
      "defId": "Golden.Fanout.reflect",
      "effect": "pure",
      "input": {
        "label": "port[0]",
        "ty": "Point",
      },
      "kind": "ref",
      "label": "node[0]",
      "output": {
        "label": "port[1]",
        "ty": "Point",
      },
      "provenance": true,
    },
    {
      "defId": "Golden.Fanout.translate",
      "effect": "pure",
      "input": {
        "label": "port[2]",
        "ty": "Point",
      },
      "kind": "ref",
      "label": "node[1]",
      "output": {
        "label": "port[3]",
        "ty": "Point",
      },
      "provenance": true,
    },
  ],
  "outPort": {
    "label": "out",
    "ty": "Point",
  },
  "provenance": true,
  "wires": [
    {
      "from": "in",
      "to": "port[0]",
    },
    {
      "from": "port[1]",
      "to": "port[2]",
    },
    {
      "from": "port[3]",
      "to": "out",
    },
  ],
}
`;

exports[`fanout: Point transformations > translate graph shape 1`] = `
{
  "effect": "pure",
  "inPort": {
    "label": "in",
    "ty": "Point",
  },
  "nodes": [
    {
      "branches": [
        {
          "graph": {
            "effect": "pure",
            "inPort": {
              "label": "in",
              "ty": "{ x: Int, y: Int }",
            },
            "nodes": [
              {
                "effect": "pure",
                "input": {
                  "label": "in",
                  "ty": "{ x: Int, y: Int }",
                },
                "kind": "dup",
                "label": "node[0]",
                "outputs": [
                  {
                    "label": "port[0]",
                    "ty": "{ x: Int, y: Int }",
                  },
                  {
                    "label": "port[1]",
                    "ty": "{ x: Int, y: Int }",
                  },
                ],
                "provenance": true,
              },
              {
                "effect": "pure",
                "field": "x",
                "input": {
                  "label": "port[2]",
                  "ty": "{ x: Int, y: Int }",
                },
                "kind": "proj",
                "label": "node[1]",
                "output": {
                  "label": "port[3]",
                  "ty": "Int",
                },
                "provenance": true,
              },
              {
                "effect": "pure",
                "field": "y",
                "input": {
                  "label": "port[4]",
                  "ty": "{ x: Int, y: Int }",
                },
                "kind": "proj",
                "label": "node[2]",
                "output": {
                  "label": "port[5]",
                  "ty": "Int",
                },
                "provenance": true,
              },
              {
                "effect": "pure",
                "input": {
                  "label": "port[6]",
                  "ty": "{ x: Int, y: Int }",
                },
                "kind": "dup",
                "label": "node[3]",
                "outputs": [
                  {
                    "label": "port[7]",
                    "ty": "{ x: Int, y: Int }",
                  },
                  {
                    "label": "port[8]",
                    "ty": "{ x: Int, y: Int }",
                  },
                ],
                "provenance": true,
              },
              {
                "effect": "pure",
                "input": {
                  "label": "port[9]",
                  "ty": "{ x: Int, y: Int }",
                },
                "kind": "dup",
                "label": "node[4]",
                "outputs": [
                  {
                    "label": "port[10]",
                    "ty": "{ x: Int, y: Int }",
                  },
                  {
                    "label": "port[11]",
                    "ty": "{ x: Int, y: Int }",
                  },
                ],
                "provenance": true,
              },
              {
                "effect": "pure",
                "input": {
                  "label": "port[12]",
                  "ty": "{ x: Int, y: Int }",
                },
                "kind": "drop",
                "label": "node[5]",
                "output": {
                  "label": "port[13]",
                  "ty": "Unit",
                },
                "provenance": true,
              },
              {
                "effect": "pure",
                "input": {
                  "label": "port[14]",
                  "ty": "{ x: Int, y: Int }",
                },
                "kind": "drop",
                "label": "node[6]",
                "output": {
                  "label": "port[15]",
                  "ty": "Unit",
                },
                "provenance": true,
              },
              {
                "effect": "pure",
                "kind": "const",
                "label": "node[7]",
                "output": {
                  "label": "port[16]",
                  "ty": "Int",
                },
                "provenance": true,
                "value": {
                  "tag": "int",
                  "value": 1,
                },
              },
              {
                "effect": "pure",
                "inputs": [
                  {
                    "label": "l",
                    "port": {
                      "label": "port[3]",
                      "ty": "Int",
                    },
                  },
                  {
                    "label": "r",
                    "port": {
                      "label": "port[16]",
                      "ty": "Int",
                    },
                  },
                ],
                "kind": "tuple",
                "label": "node[8]",
                "output": {
                  "label": "port[17]",
                  "ty": "{ l: Int, r: Int }",
                },
                "provenance": true,
              },
              {
                "defId": "builtin.add",
                "effect": "pure",
                "input": {
                  "label": "port[18]",
                  "ty": "{ l: Int, r: Int }",
                },
                "kind": "ref",
                "label": "node[9]",
                "output": {
                  "label": "port[19]",
                  "ty": "Int",
                },
                "provenance": true,
              },
              {
                "effect": "pure",
                "input": {
                  "label": "port[20]",
                  "ty": "{ x: Int, y: Int }",
                },
                "kind": "dup",
                "label": "node[10]",
                "outputs": [
                  {
                    "label": "port[21]",
                    "ty": "{ x: Int, y: Int }",
                  },
                  {
                    "label": "port[22]",
                    "ty": "{ x: Int, y: Int }",
                  },
                ],
                "provenance": true,
              },
              {
                "effect": "pure",
                "input": {
                  "label": "port[23]",
                  "ty": "{ x: Int, y: Int }",
                },
                "kind": "drop",
                "label": "node[11]",
                "output": {
                  "label": "port[24]",
                  "ty": "Unit",
                },
                "provenance": true,
              },
              {
                "effect": "pure",
                "input": {
                  "label": "port[25]",
                  "ty": "{ x: Int, y: Int }",
                },
                "kind": "drop",
                "label": "node[12]",
                "output": {
                  "label": "port[26]",
                  "ty": "Unit",
                },
                "provenance": true,
              },
              {
                "effect": "pure",
                "kind": "const",
                "label": "node[13]",
                "output": {
                  "label": "port[27]",
                  "ty": "Int",
                },
                "provenance": true,
                "value": {
                  "tag": "int",
                  "value": 1,
                },
              },
              {
                "effect": "pure",
                "inputs": [
                  {
                    "label": "l",
                    "port": {
                      "label": "port[5]",
                      "ty": "Int",
                    },
                  },
                  {
                    "label": "r",
                    "port": {
                      "label": "port[27]",
                      "ty": "Int",
                    },
                  },
                ],
                "kind": "tuple",
                "label": "node[14]",
                "output": {
                  "label": "port[28]",
                  "ty": "{ l: Int, r: Int }",
                },
                "provenance": true,
              },
              {
                "defId": "builtin.add",
                "effect": "pure",
                "input": {
                  "label": "port[29]",
                  "ty": "{ l: Int, r: Int }",
                },
                "kind": "ref",
                "label": "node[15]",
                "output": {
                  "label": "port[30]",
                  "ty": "Int",
                },
                "provenance": true,
              },
              {
                "effect": "pure",
                "inputs": [
                  {
                    "label": "x",
                    "port": {
                      "label": "port[19]",
                      "ty": "Int",
                    },
                  },
                  {
                    "label": "y",
                    "port": {
                      "label": "port[30]",
                      "ty": "Int",
                    },
                  },
                ],
                "kind": "tuple",
                "label": "node[16]",
                "output": {
                  "label": "port[31]",
                  "ty": "{ x: Int, y: Int }",
                },
                "provenance": true,
              },
              {
                "adtTy": "Point",
                "ctorName": "Point",
                "effect": "pure",
                "input": {
                  "label": "port[32]",
                  "ty": "{ x: Int, y: Int }",
                },
                "kind": "ctor",
                "label": "node[17]",
                "output": {
                  "label": "port[33]",
                  "ty": "Point",
                },
                "provenance": true,
              },
            ],
            "outPort": {
              "label": "out",
              "ty": "Point",
            },
            "provenance": true,
            "wires": [
              {
                "from": "port[0]",
                "to": "port[2]",
              },
              {
                "from": "port[1]",
                "to": "port[4]",
              },
              {
                "from": "in",
                "to": "port[6]",
              },
              {
                "from": "port[7]",
                "to": "port[9]",
              },
              {
                "from": "port[10]",
                "to": "port[12]",
              },
              {
                "from": "port[11]",
                "to": "port[14]",
              },
              {
                "from": "port[17]",
                "to": "port[18]",
              },
              {
                "from": "port[8]",
                "to": "port[20]",
              },
              {
                "from": "port[21]",
                "to": "port[23]",
              },
              {
                "from": "port[22]",
                "to": "port[25]",
              },
              {
                "from": "port[28]",
                "to": "port[29]",
              },
              {
                "from": "port[31]",
                "to": "port[32]",
              },
              {
                "from": "port[33]",
                "to": "out",
              },
            ],
          },
          "rawPayloadTy": "{ x: Int, y: Int }",
          "tag": "Point",
        },
      ],
      "contextTy": undefined,
      "effect": "pure",
      "field": undefined,
      "input": {
        "label": "port[0]",
        "ty": "Point",
      },
      "kind": "case",
      "label": "node[0]",
      "outTy": "Point",
      "output": {
        "label": "port[1]",
        "ty": "Point",
      },
      "provenance": true,
      "variantTy": "Point",
    },
  ],
  "outPort": {
    "label": "out",
    "ty": "Point",
  },
  "provenance": true,
  "wires": [
    {
      "from": "in",
      "to": "port[0]",
    },
    {
      "from": "port[1]",
      "to": "out",
    },
  ],
}
`;

exports[`fold + let: sumOfDoubles > sumOfDoubles graph shape 1`] = `
{
  "effect": "pure",
  "inPort": {
    "label": "in",
    "ty": "List Int",
  },
  "nodes": [
    {
      "adtTy": "List Int",
      "algebra": [
        {
          "graph": {
            "effect": "pure",
            "inPort": {
              "label": "in",
              "ty": "Unit",
            },
            "nodes": [
              {
                "effect": "pure",
                "input": {
                  "label": "port[0]",
                  "ty": "Unit",
                },
                "kind": "drop",
                "label": "node[0]",
                "output": {
                  "label": "port[1]",
                  "ty": "Unit",
                },
                "provenance": true,
              },
              {
                "effect": "pure",
                "kind": "const",
                "label": "node[1]",
                "output": {
                  "label": "port[2]",
                  "ty": "Int",
                },
                "provenance": true,
                "value": {
                  "tag": "int",
                  "value": 0,
                },
              },
            ],
            "outPort": {
              "label": "out",
              "ty": "Int",
            },
            "provenance": true,
            "wires": [
              {
                "from": "in",
                "to": "port[0]",
              },
              {
                "from": "port[2]",
                "to": "out",
              },
            ],
          },
          "rawPayloadTy": "Unit",
          "tag": "Nil",
        },
        {
          "graph": {
            "effect": "pure",
            "inPort": {
              "label": "in",
              "ty": "{ head: Int, tail: Int }",
            },
            "nodes": [
              {
                "effect": "pure",
                "input": {
                  "label": "in",
                  "ty": "{ head: Int, tail: Int }",
                },
                "kind": "dup",
                "label": "node[0]",
                "outputs": [
                  {
                    "label": "port[0]",
                    "ty": "{ head: Int, tail: Int }",
                  },
                  {
                    "label": "port[1]",
                    "ty": "{ head: Int, tail: Int }",
                  },
                ],
                "provenance": true,
              },
              {
                "effect": "pure",
                "field": "head",
                "input": {
                  "label": "port[2]",
                  "ty": "{ head: Int, tail: Int }",
                },
                "kind": "proj",
                "label": "node[1]",
                "output": {
                  "label": "port[3]",
                  "ty": "Int",
                },
                "provenance": true,
              },
              {
                "effect": "pure",
                "input": {
                  "label": "port[3]",
                  "ty": "Int",
                },
                "kind": "dup",
                "label": "node[2]",
                "outputs": [
                  {
                    "label": "port[4]",
                    "ty": "Int",
                  },
                  {
                    "label": "port[5]",
                    "ty": "Int",
                  },
                ],
                "provenance": true,
              },
              {
                "effect": "pure",
                "field": "tail",
                "input": {
                  "label": "port[6]",
                  "ty": "{ head: Int, tail: Int }",
                },
                "kind": "proj",
                "label": "node[3]",
                "output": {
                  "label": "port[7]",
                  "ty": "Int",
                },
                "provenance": true,
              },
              {
                "effect": "pure",
                "input": {
                  "label": "port[8]",
                  "ty": "{ head: Int, tail: Int }",
                },
                "kind": "dup",
                "label": "node[4]",
                "outputs": [
                  {
                    "label": "port[9]",
                    "ty": "{ head: Int, tail: Int }",
                  },
                  {
                    "label": "port[10]",
                    "ty": "{ head: Int, tail: Int }",
                  },
                ],
                "provenance": true,
              },
              {
                "effect": "pure",
                "input": {
                  "label": "port[11]",
                  "ty": "{ head: Int, tail: Int }",
                },
                "kind": "drop",
                "label": "node[5]",
                "output": {
                  "label": "port[12]",
                  "ty": "Unit",
                },
                "provenance": true,
              },
              {
                "effect": "pure",
                "input": {
                  "label": "port[13]",
                  "ty": "{ head: Int, tail: Int }",
                },
                "kind": "drop",
                "label": "node[6]",
                "output": {
                  "label": "port[14]",
                  "ty": "Unit",
                },
                "provenance": true,
              },
              {
                "effect": "pure",
                "inputs": [
                  {
                    "label": "l",
                    "port": {
                      "label": "port[4]",
                      "ty": "Int",
                    },
                  },
                  {
                    "label": "r",
                    "port": {
                      "label": "port[5]",
                      "ty": "Int",
                    },
                  },
                ],
                "kind": "tuple",
                "label": "node[7]",
                "output": {
                  "label": "port[15]",
                  "ty": "{ l: Int, r: Int }",
                },
                "provenance": true,
              },
              {
                "defId": "builtin.add",
                "effect": "pure",
                "input": {
                  "label": "port[16]",
                  "ty": "{ l: Int, r: Int }",
                },
                "kind": "ref",
                "label": "node[8]",
                "output": {
                  "label": "port[17]",
                  "ty": "Int",
                },
                "provenance": true,
              },
              {
                "effect": "pure",
                "inputs": [
                  {
                    "label": "doubled",
                    "port": {
                      "label": "port[17]",
                      "ty": "Int",
                    },
                  },
                  {
                    "label": "tail",
                    "port": {
                      "label": "port[7]",
                      "ty": "Int",
                    },
                  },
                ],
                "kind": "tuple",
                "label": "node[9]",
                "output": {
                  "label": "port[18]",
                  "ty": "{ doubled: Int, tail: Int }",
                },
                "provenance": true,
              },
              {
                "effect": "pure",
                "input": {
                  "label": "port[18]",
                  "ty": "{ doubled: Int, tail: Int }",
                },
                "kind": "dup",
                "label": "node[10]",
                "outputs": [
                  {
                    "label": "port[19]",
                    "ty": "{ doubled: Int, tail: Int }",
                  },
                  {
                    "label": "port[20]",
                    "ty": "{ doubled: Int, tail: Int }",
                  },
                  {
                    "label": "port[21]",
                    "ty": "{ doubled: Int, tail: Int }",
                  },
                ],
                "provenance": true,
              },
              {
                "effect": "pure",
                "field": "doubled",
                "input": {
                  "label": "port[22]",
                  "ty": "{ doubled: Int, tail: Int }",
                },
                "kind": "proj",
                "label": "node[11]",
                "output": {
                  "label": "port[23]",
                  "ty": "Int",
                },
                "provenance": true,
              },
              {
                "effect": "pure",
                "field": "tail",
                "input": {
                  "label": "port[24]",
                  "ty": "{ doubled: Int, tail: Int }",
                },
                "kind": "proj",
                "label": "node[12]",
                "output": {
                  "label": "port[25]",
                  "ty": "Int",
                },
                "provenance": true,
              },
              {
                "effect": "pure",
                "input": {
                  "label": "port[26]",
                  "ty": "{ doubled: Int, tail: Int }",
                },
                "kind": "dup",
                "label": "node[13]",
                "outputs": [
                  {
                    "label": "port[27]",
                    "ty": "{ doubled: Int, tail: Int }",
                  },
                  {
                    "label": "port[28]",
                    "ty": "{ doubled: Int, tail: Int }",
                  },
                ],
                "provenance": true,
              },
              {
                "effect": "pure",
                "input": {
                  "label": "port[29]",
                  "ty": "{ doubled: Int, tail: Int }",
                },
                "kind": "drop",
                "label": "node[14]",
                "output": {
                  "label": "port[30]",
                  "ty": "Unit",
                },
                "provenance": true,
              },
              {
                "effect": "pure",
                "input": {
                  "label": "port[31]",
                  "ty": "{ doubled: Int, tail: Int }",
                },
                "kind": "drop",
                "label": "node[15]",
                "output": {
                  "label": "port[32]",
                  "ty": "Unit",
                },
                "provenance": true,
              },
              {
                "effect": "pure",
                "inputs": [
                  {
                    "label": "l",
                    "port": {
                      "label": "port[23]",
                      "ty": "Int",
                    },
                  },
                  {
                    "label": "r",
                    "port": {
                      "label": "port[25]",
                      "ty": "Int",
                    },
                  },
                ],
                "kind": "tuple",
                "label": "node[16]",
                "output": {
                  "label": "port[33]",
                  "ty": "{ l: Int, r: Int }",
                },
                "provenance": true,
              },
              {
                "defId": "builtin.add",
                "effect": "pure",
                "input": {
                  "label": "port[34]",
                  "ty": "{ l: Int, r: Int }",
                },
                "kind": "ref",
                "label": "node[17]",
                "output": {
                  "label": "port[35]",
                  "ty": "Int",
                },
                "provenance": true,
              },
            ],
            "outPort": {
              "label": "out",
              "ty": "Int",
            },
            "provenance": true,
            "wires": [
              {
                "from": "port[0]",
                "to": "port[2]",
              },
              {
                "from": "port[1]",
                "to": "port[6]",
              },
              {
                "from": "in",
                "to": "port[8]",
              },
              {
                "from": "port[9]",
                "to": "port[11]",
              },
              {
                "from": "port[10]",
                "to": "port[13]",
              },
              {
                "from": "port[15]",
                "to": "port[16]",
              },
              {
                "from": "port[19]",
                "to": "port[22]",
              },
              {
                "from": "port[20]",
                "to": "port[24]",
              },
              {
                "from": "port[21]",
                "to": "port[26]",
              },
              {
                "from": "port[27]",
                "to": "port[29]",
              },
              {
                "from": "port[28]",
                "to": "port[31]",
              },
              {
                "from": "port[33]",
                "to": "port[34]",
              },
              {
                "from": "port[35]",
                "to": "out",
              },
            ],
          },
          "rawPayloadTy": "{ head: Int, tail: List Int }",
          "tag": "Cons",
        },
      ],
      "carrierTy": "Int",
      "effect": "pure",
      "input": {
        "label": "port[0]",
        "ty": "List Int",
      },
      "kind": "cata",
      "label": "node[0]",
      "output": {
        "label": "port[1]",
        "ty": "Int",
      },
      "provenance": true,
    },
  ],
  "outPort": {
    "label": "out",
    "ty": "Int",
  },
  "provenance": true,
  "wires": [
    {
      "from": "in",
      "to": "port[0]",
    },
    {
      "from": "port[1]",
      "to": "out",
    },
  ],
}
`;
